Fixing icon and temperature to be aligned

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -25,27 +25,21 @@
   list-style: none;
 }
 
-.Weather canvas {
-  margin-right: 5px;
-  margin-top: 5px;
-  display: inline-block;
-}
-
 .Weather .temperature {
   font-weight: bold;
   color: rgb(33, 33, 33);
   font-size: 64px;
   line-height: 64px;
+  margin-left: 5px;
   font-weight: 400;
+  margin-left: 10px;
 }
 
-.Weather unit {
-  font-size: 16px;
-  font-weight: 400;
-  position: relative;
-  line-height: 1;
-  top: -32px;
-  margin-left: 5px;
+.Weather canvas {
+  margin: 10px auto;
+  margin-right: 5px;
+  margin-top: 5px;
+  display: inline-block;
 }
 
 .Weather .unit {
